2003-05-16  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/op_header.cpp: remove cpu_speed checking

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: bailout in get_linenr() if binary doesn't
	  contain any debug info. Speed up my test case opreport --debug-info
	  -l by 25

2003-05-16  John Levon  <levon@movementarian.org>

	* libutil++/op_bdf.cpp: clean up interesting_symbol
	a bit

2003-05-16  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.cpp: make sure linenr is
	always set to something

	* libpp/opp_symbol.h: linenr should be unsigned

	* libpp/profile_container.cpp: remove some unneeded
	copies
	
2003-05-16  John Levon  <levon@movementarian.org>

	* pp/opannotate.cpp: small renaming

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp: don't demangle and
	basename() here.

	* libpp/profile_container.h:
	* libpp/profile_container.cpp: return copied symbols
	in a list from select_symbols()

	* libpp/symbol_container.cpp:
	* libpp/symbol_sort.cpp:
	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: changes from above

2003-05-15  John Levon  <levon@movementarian.org>

	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp: add begin(), end(),
	remove symbols_by_count()

	* libpp/profile_container.cpp: use symbol container
	iterator directly in select_symbols()

2003-05-15  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp:
	* libpp/symbol_sort.h:
	* libpp/symbol_sort.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp:
	* pp/opgprof.cpp: move symbol_collection typedef
	  into global namespace, and use consistently

2003-05-15  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp: add vma_format_64bit(),
	remove bool parameter from output()

	* pp/opreport.cpp: change from above, refactor flags