@@ -1,3 +1,8 @@
+2003-05-16  John Levon  <levon@movementarian.org>
+
+	* libutil++/op_bfd.h:
+	* libutil++/op_bfd.cpp: remove have_debug_info()
+
 2003-05-16  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libpp/op_header.cpp: remove cpu_speed checking
